[HW5] Fix comments